# adult_content_classifier

./: .gitignore  README.md  pyproject.toml  requirements.txt
adult_content_classifier/: cli.py  data.py  data_processor.py  data_processor_roberta.py  model.py  roberta.py  roberta_classifier.py
adult_content_classifier/bow/: __init__.py  data.py  filtering_functions.py  model.py  model_profiling.py  profiling.py
resources/: BoW.md
scripts/barnard/: install.sh  run.sh  run_array.sh  run_single.sh
scripts/barnard/bow/: run_array.sh  run_single.sh
scripts/barnard/roberta/: run_single.sh
